Final version + Add comment and start Read.me a put the License